Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12469

sanity test_230b crash: LBUG of lu_buf_free in mdd_iterate_xattrs

XMLWordPrintable

    • 9223372036854775807

      [ 8755.816950] LustreError: 26096:0:(lu_object.c:2399:lu_buf_free()) ASSERTION( buf->lb_len > 0 ) failed:
      [ 8755.819785] LustreError: 26096:0:(lu_object.c:2399:lu_buf_free()) LBUG
      [ 8755.821791] Pid: 26096, comm: mdt00_002 3.10.0-862.14.4.el7_lustre.2.12.54_52_g948202a.x86_64 #1 SMP Thu Jun 13 11:34:55 CST 2019
      [ 8755.826429] Call Trace:
      [ 8755.827263]  [<ffffffffc06d77cc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [ 8755.829385]  [<ffffffffc06d787c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 8755.831108]  [<ffffffffc08b9b93>] lu_buf_free+0x213/0x220 [obdclass]
      [ 8755.832160]  [<ffffffffc18227cf>] mdd_iterate_xattrs+0x57f/0x8d0 [mdd]
      [ 8755.833215]  [<ffffffffc184845b>] mdd_declare_migrate_create+0x2bb/0x3b6 [mdd]
      [ 8755.834365]  [<ffffffffc182d810>] mdd_migrate+0xea0/0x1810 [mdd]
      [ 8755.835344]  [<ffffffffc16ec60f>] mdt_reint_migrate+0x1def/0x2400 [mdt]
      [ 8755.836434]  [<ffffffffc16ecca3>] mdt_reint_rec+0x83/0x210 [mdt]
      [ 8755.837417]  [<ffffffffc16c8470>] mdt_reint_internal+0x780/0xb90 [mdt]
      [ 8755.838474]  [<ffffffffc16d3877>] mdt_reint+0x67/0x140 [mdt]
      [ 8755.839408]  [<ffffffffc0f6d60a>] tgt_request_handle+0x91a/0x15c0 [ptlrpc]
      [ 8755.840575]  [<ffffffffc0f117ee>] ptlrpc_server_handle_request+0x24e/0xab0 [ptlrpc]
      [ 8755.841810]  [<ffffffffc0f152dc>] ptlrpc_main+0xbac/0x1550 [ptlrpc]
      [ 8755.842865]  [<ffffffff8c8bdf21>] kthread+0xd1/0xe0
      [ 8755.843706]  [<ffffffff8cf255f7>] ret_from_fork_nospec_end+0x0/0x39
      [ 8755.844664]  [<ffffffffffffffff>] 0xffffffffffffffff
      [ 8755.845501] Kernel panic - not syncing: LBUG
      

            sebastien Sebastien Buisson
            lixi_wc Li Xi
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: